--- a/lab2/src/css/style.css
+++ b/lab2/src/css/style.css
@@ -1,9 +1,13 @@
-* {
-    font-family: Brush Script MT, serif;
-    color: #242424;
-}
+
 body {
+    font-family: 'Raleway', sans-serif;
+    color: #242424;
     margin: 0;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
 .line{
     margin-top: 30px;
@@ -16,6 +20,8 @@ body {
 
 .main section .basic_info blockquote {
     font-size: 17px;
+    word-spacing: 0.5rem;
+    font-style: italic;
 }
 
 header {
@@ -45,17 +51,18 @@ header .active {
 }
 header .topnav .active:hover {
      color: #ddd;
+     text-decoration: underline;
  }
 
 header .name{
-    /*margin-top: auto;*/
+    text-transform: uppercase;
 }
 
 .main section{
     display: block;
     width: 80%;
     margin: 50px auto 0;
-    
+
 }
 
 .main section .head {
@@ -70,7 +77,6 @@ header .name{
     margin-top: 10px;
 }
 /*.main .information .records {*/
-/*    border: 2px solid grey;*/
 /*}*/
 
 .main #information small{
